Fix alignment issues with nested collapsed rows

--- a/scss/grid/_classes.scss
+++ b/scss/grid/_classes.scss
@@ -21,15 +21,20 @@
   // Row
   .#{$row} {
     @include grid-row;
-    
-    // Nested rows
-    & & {
-      @include grid-row($behavior: nest, $cf: false);
-    }
 
     // Collapsing
     &.#{$collapse} {
       > .#{$column} { @include grid-col-collapse; }
+    }
+
+    // Nesting
+    & &,
+    .column-row & {
+      @include grid-row($behavior: nest, $cf: false);
+
+      &.collapse {
+        @include grid-row($behavior: nest collapse, $cf: false);
+      }
     }
 
     // Responsive collapsing
